# infsupnet

./: README.md  pyproject.toml
examples/Elliptic_Nonlinear/: train_script_nonl.py
examples/Elliptic_Semilinear/: train_script_semilinear.py
examples/Poisson/: train_script.py
examples/Poisson_Lshape/: ell.csv  train_script_L.py
examples/Poisson_mixedBC/: ell_mixed.csv  train_script_mixedBC.py
src/infsupnet/: __init__.py  dataset.py  equation.py  model.py  train.py  utils.py
