[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name = "infsupnet"
version = "0.0.1"
authors = [
  { name="Xiaokai Huo", email="xhuo@iastate.edu" },
]
description = "InfSupNet for solving high dimensional PDEs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexhuo2020/infsupnet"
"Bug Tracker" = "https://github.com/alexhuo2020/infsupnet/issues"

